--- a/react-app/.gitignore
+++ b/react-app/.gitignore
@@ -1,9 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-/venv
+.vscode
 
 # dependencies
-/node_modules
+.node_modules
 /.pnp
 .pnp.js
 
@@ -23,3 +22,24 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
+node_modules
